Tested on macOS, Linux, MinGW and with Java8 New deployment folder Plugin deployment tool